Erratum TME 1 EXE 2 Terminé

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,6 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "/home/PSCR-TME/TME1/TestListe"
 }
